<resources>
    <string name="app_name">AppleCalCulator</string>
    <string name="_0">0</string>
    <string name="Moduls">%</string>
    <string name="nigative">+/-</string>
    <string name="Clear">C</string>
    <string name="Division">/</string>
    <string name="multi">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Minus">-</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="ClosePra">)</string>
    <string name="OpenBracket">(</string>
</resources>